--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,6 +1,7 @@
 <table>
     <tr valign="top">
         <td><img src="{{post.author.avatar(36)}}" alt=""></td>
+        <p><a href="{{ url_for('user_profile',username = post.author.username)}}">{{ post.author.username }} Profile</a></p>
         <td><p>{{post.author.username}} says: <br> {{post.body}}</p></td>
     </tr>
 </table>
