--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -5,16 +5,30 @@
     <tr valign="top">
         <td><img src="{{user.avatar(size=128)}}" alt="Profile image of the user"></td>
         <td>
+            
+            <h1>{{user.username}}</h1>
+            <p> {{ user.followers.count() }} followers , {{ user.followed.count() }} following</p>
+            <!--Edit profile-->
             {% if user == current_user %}
             <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
-            {% else  %}
-                {% if user in current_user.followed %}
-                <p><a href="{{ url_for('unfollow',username = user.username)}}">Unfollow this user</a></p>
-                {% else %}
-                <p><a href="{{  url_for('follow',username = user.username)}}">Follow this user</a></p>
-                {% endif %}
+
+            <!--Follow /  Unfollow-->
+            {% elif not current_user.is_following(user) %}
+            <p>
+                <form action="{{ url_for('follow', username=user.username) }}" method="post">
+                    {{ form.hidden_tag() }}
+                    {{ form.submit(value='Follow') }}
+                </form>
+            </p>
+            {% else %}
+            <p>
+                <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+                    {{ form.hidden_tag() }}
+                    {{ form.submit(value='Unfollow') }}
+                </form>
+            </p>
             {% endif %}
-            <h1>{{user.username}}</h1>
+            
             {% if user.about_me %}
                 <p>{{user.about_me}}</p>
             {% endif %}
